--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+
+<head>
+
+   
+
+
+</head>
+
+<body>
+    <h1 id="content">hello</h1>
+    <p id="winmessage"></p>
+
+</body>
