--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 
 <head>
 
-   
+    <script src="script.js" defer></script>
 
 
 </head>
 
 <body>
+    <button onclick="getData(246)">Click ME!</button>
     <h1 id="content">hello</h1>
     <p id="winmessage"></p>
 
